# tauri-toolbar

./: LICENSE  README.md  biome.json  farm.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.workspace.ts
.storybook/: main.ts  preview.ts
src/: App.css  App.tsx  index.css  main.tsx  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.stories.tsx  checkbox.tsx  footer.stories.tsx  footer.tsx  form.tsx  header.tsx  with-window-store.tsx
src/database/: db.ts  schema.ts
src/lib/: resize.ts
src/stores/: window-store.ts  windowState.ts
src/windows/: popup.tsx
src/windows/item/: item-list.tsx
